syntax = "proto3";

package CustomersManagement;

service CustomerService {
  rpc Register (RegisterCustomer) returns (Ack) {}
}

message RegisterCustomer {
  string customerId = 1;
  string displayName = 2;
}

message Ack {
  string message = 1;
}
